# xplot-firmware

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs  motor.rs  usb.rs
