[package]
edition = "2024"
name = "xplot-firmware"
version = "0.1.0"
license = "MIT"


[dependencies]
cortex-m = { version = "*", features = ["inline-asm"] }
cortex-m-rt = "*"
defmt = "*"
defmt-rtt = "*"
panic-probe = { version = "*", features = ["print-defmt"] }
embassy-embedded-hal = { version = "*", features = ["defmt"] }
embassy-executor = { version = "*", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-32768"] }
embassy-futures = { version = "*" }
embassy-sync = { version = "*", features = ["defmt"] }
embassy-time = { version = "*", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "*", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
pio-proc = "*"
pio = "*"
embassy-usb-driver = { version = "*", features = ["defmt"] }
embassy-usb-logger = { version = "*" }
portable-atomic = { version = "*", features = ["critical-section"] }
log = "*"
embassy-usb = "*"
static_cell = "*"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'